--- a/web/src/styles/globals.scss
+++ b/web/src/styles/globals.scss
@@ -9,3 +9,6 @@ $font-family-sans-serif: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, 
 @import "bootstrap/scss/alert";
 @import "bootstrap/scss/pagination";
 @import "bootstrap/scss/tables";
+a{
+    cursor:pointer;
+}
