--- a/web/src/styles/globals.scss
+++ b/web/src/styles/globals.scss
@@ -12,3 +12,9 @@ $font-family-sans-serif: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, 
 a{
     cursor:pointer;
 }
+.page-item{
+    width: 50px;
+}
+.page-link{
+    text-align: center;
+}
